content and image opt

--- a/src/content/pages/about/index.mdx
+++ b/src/content/pages/about/index.mdx
@@ -1,11 +1,13 @@
 ---
 title: About
 description: I'm a self-thought full-stack software developer who likes build stuffs on the internet
-draft: true
+isDraft: false
 ---
+
+import Avatar from "@/components/Avatar.astro";
 
 # {frontmatter.title}
 
-![Avatar](https://scontent.fdac24-4.fna.fbcdn.net/v/t39.30808-6/340639642_6041067976013795_3569553007618961921_n.jpg?_nc_cat=111&ccb=1-7&_nc_sid=09cbfe&_nc_ohc=k5iICL2ZZWkAX_2oUX2&_nc_ht=scontent.fdac24-4.fna&oh=00_AfANhjA7f91SmPNKuYPuALhTxJKw-_3kiSqewC7Nze18Ug&oe=6441E55E)
+<Avatar />
 
 Hi👋, I'm [Rohid](https://twitter.com/rohiddev). I'm a self-thought developer and founder Inspired. I'm currently building [Inspirly](https://inspirly.app) in public and also doing [YouTube](https://youtube.com/@rohiddev) occasionally.
