--- a/src/content/posts/react-native-shopping-ui/index.mdx
+++ b/src/content/posts/react-native-shopping-ui/index.mdx
@@ -1,7 +1,7 @@
 ---
 title: React Native Shopping App UI
 description: In this video tutorial, I am going to implement this awesome Shopping app UI 😍.
-coverImage: /images/react-native-shopping-ui-part-01.png
+coverImage: ./react-native-shopping-ui.png
 publishDate: 2023-04-05
 isDraft: false
 ---
