--- a/src/content/projects/codetoimg/index.mdx
+++ b/src/content/projects/codetoimg/index.mdx
@@ -1,7 +1,7 @@
 ---
 name: CodeToImg
 description: Generate beautiful image of your code snippets
-coverImage: /images/codetoimg-cover-photo.png
+coverImage: ./cover.png
 isLaunched: true
 urls:
   web: https://codetoimg.com
