--- a/src/content/projects/fantasy-ai/index.mdx
+++ b/src/content/projects/fantasy-ai/index.mdx
@@ -1,7 +1,7 @@
 ---
 name: Fantasy AI
 description: Generate photorealistic images with simple prompt
-coverImage: /images/fantasy-ai-cover-photo.png
+coverImage: ./cover.png
 isLaunched: true
 urls:
   web: https://fantasyai.rohid.dev
