--- a/src/content/projects/inspirly/index.mdx
+++ b/src/content/projects/inspirly/index.mdx
@@ -1,7 +1,7 @@
 ---
 name: Inspirly
 description: Get daily personalized motivation from Inspirly! AI generates unique, inspiring quotes to boost your day. Easy to use, save favorites for later.
-coverImage: /images/inspirly-cover-photo.png
+coverImage: ./cover.png
 isLaunched: false
 urls:
   web: https://inspirly.app
