--- a/src/content/projects/open-writer/index.mdx
+++ b/src/content/projects/open-writer/index.mdx
@@ -1,7 +1,7 @@
 ---
 name: Open Writer
 description: Your personal AI writing Assistant
-coverImage: /images/open-writer-cover-photo.png
+coverImage: ./cover.png
 isLaunched: false
 ---
 
