--- a/src/content/projects/tik-track/index.mdx
+++ b/src/content/projects/tik-track/index.mdx
@@ -1,7 +1,7 @@
 ---
 name: TikTrack
 description: Manage TikTok like a pro
-coverImage: /images/tiktrack-cover-photo.png
+coverImage: ./cover.png
 isLaunched: true
 urls:
   appStore: https://apps.apple.com/us/app/tik-track-tracker-for-tok/id1633691441
