--- a/src/content/posts/react-native-intro-animation/index.mdx
+++ b/src/content/posts/react-native-intro-animation/index.mdx
@@ -1,7 +1,7 @@
 ---
 title: React Native App Intro Animation with Reanimated
 description: A open source github repository for a movies app built with react native and react query.
-coverImage: /images/onboarding-animation-react-native.png
+coverImage: ./react-native-intro-animation.png
 publishDate: 2023-04-04
 isDraft: false
 ---
