contact description fix

--- a/src/content/pages/about/index.mdx
+++ b/src/content/pages/about/index.mdx
@@ -10,4 +10,4 @@ import Avatar from "@/components/Avatar.astro";
 
 <Avatar />
 
-Hi👋, I'm [Rohid](https://twitter.com/rohiddev). I'm a self-thought developer and founder Inspired. I'm currently building [Inspirly](https://inspirly.app) in public and also doing [YouTube](https://youtube.com/@rohiddev) occasionally.
+Hi👋, I'm [Rohid](https://twitter.com/rohiddev). I'm a self-thought developer. I'm currently building [Inspirly](https://inspirly.app) in public and also doing [YouTube](https://youtube.com/@rohiddev) occasionally.
